fixed colour contrast issue

--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -34,8 +34,8 @@
     }
    
     h2{
-        background-color: green;
-        color: #e7e7e7;
+        background-color: #075d07;
+        color: white;
         line-height: 50px;
         margin-left: -5px;
         margin-right: 20px;
